--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "firevel/firestore": "^1.0.0",
+        "firevel/firestore-cache-driver": "^1.0",
         "firevel/firestore-session-driver": "^1.0",
         "firevel/stackdriver-log-channel": "^1.0.0",
         "laravel/framework": "5.8.*",
