--- a/.gcloudignore
+++ b/.gcloudignore
@@ -10,6 +10,7 @@
 # If you would like to upload your .git directory, .gitignore file or files
 # from your .gitignore file, remove the corresponding line
 # below:
+.env
 .git
 .gitignore
 
