--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "laravel-mix": "^4.1.2",
+        "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "sass": "^1.22.10",
+        "sass-loader": "^7.3.1",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     }
 }
