--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "firevel/firequent": "^0.0.1",
         "firevel/firestore": "^1.0.0",
         "firevel/firestore-cache-driver": "^1.0",
         "firevel/firestore-session-driver": "^1.0",
         "firevel/stackdriver-log-channel": "^1.0.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^6.2",
+        "laravel/tinker": "^2.0",
         "superbalist/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
