--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18.1",
-        "bootstrap": "^4.0.0",
+        "axios": "^0.19",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.1.2",
-        "lodash": "^4.17.15",
-        "popper.js": "^1.12",
+        "laravel-mix": "^4.0.7",
+        "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.22.10",
-        "sass-loader": "^7.3.1",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0"
     }
 }
