--- a/app.yaml.example
+++ b/app.yaml.example
@@ -12,6 +12,9 @@ env_variables:
   APP_DEBUG: false
   SESSION_DRIVER: firestore
   CACHE_DRIVER: firestore
+  ## Store bootstrap cache files in writeable /tmp.
+  APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
+  APP_PACKAGES_CACHE: /tmp/bootstrap-cache-packages.php
 
 handlers:
 - url: /robots.txt
