--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,23 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "firevel/firequent": "^0.6.0",
-        "firevel/firestore": "^1.0.0",
-        "firevel/firestore-cache-driver": "^1.0",
-        "firevel/firestore-session-driver": "^1.0",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^2.0",
+        "firevel/firequent": "^0.7.2",
+        "firevel/firestore": "^1.0.3",
+        "firevel/firestore-cache-driver": "^1.0.1",
+        "firevel/firestore-session-driver": "^1.0.2",
         "firevel/stackdriver-log-channel": "^1.0.0",
-        "laravel/framework": "^6.2",
+        "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "superbalist/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
