Enable grpc fork support

--- a/php.ini
+++ b/php.ini
@@ -1,2 +1,5 @@
 ; enable the gRPC extension
 extension=grpc.so
+
+; Ref.: https://github.com/colopl/laravel-spanner/issues/12
+grpc.enable_fork_support = 1
