--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,7 +1,13 @@
-preset: laravel
-disabled:
-  - unused_use
-finder:
-  not-name:
-    - index.php
-    - server.php
+php:
+  preset: laravel
+  disabled:
+    - unused_use
+  finder:
+    not-name:
+      - index.php
+      - server.php
+js:
+  finder:
+    not-name:
+      - webpack.mix.js
+css: true
