--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,26 @@
 {
-    "name": "firevel/firevel",
+    "name": "laravel/laravel",
     "type": "project",
-    "description": "The Serverless Laravel Framework for Google App Engine + Firestore.",
+    "description": "The Laravel Framework.",
     "keywords": [
         "framework",
-        "firevel"
+        "laravel"
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.2",
+        "php": "^7.2.5|^8.0",
+        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "firevel/firequent": "^0.7.2",
-        "firevel/firestore": "^1.0.3",
-        "firevel/firestore-cache-driver": "^1.0.1",
-        "firevel/firestore-session-driver": "^1.0.2",
-        "firevel/stackdriver-log-channel": "^1.0.0",
-        "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0",
-        "superbalist/laravel-google-cloud-storage": "^2.2"
+        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "laravel/framework": "^7.29",
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^4.3",
+        "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -62,8 +57,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php artisan firevel:generate:app"
+            "@php artisan key:generate --ansi"
         ]
     }
 }
