--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5|^8.0",
-        "fideloper/proxy": "^4.4",
+        "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "firevel/firequent": "^0.7.2",
         "firevel/firestore": "^1.0.3",
@@ -17,16 +16,16 @@
         "firevel/firestore-session-driver": "^1.0.2",
         "firevel/stackdriver-log-channel": "^1.0.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
-        "laravel/framework": "^7.29",
+        "laravel/framework": "^8.83",
         "laravel/tinker": "^2.5",
         "superbalist/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^5.10",
+        "phpunit/phpunit": "^9.5.10"
     },
     "config": {
         "optimize-autoloader": true,
@@ -63,6 +62,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
             "@php artisan firevel:generate:app"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ]
     }
 }
