--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "8.1.*",
         "fruitcake/laravel-cors": "^2.0",
         "firevel/firestore": "^1.0.3",
         "firevel/firestore-cache-driver": "^1.0.1",
