--- a/.ci/single-project/production/app.yaml.example
+++ b/.ci/single-project/production/app.yaml.example
@@ -4,7 +4,7 @@ env_variables:
   ## Put your environment variables here.
   APP_KEY: ${_APP_KEY}
   APP_ENV: production
-  FILESYSTEM_DRIVER: gcs
+  FILESYSTEM_DISK: gcs
   FILESYSTEM_CLOUD: gcs
   APP_STORAGE: /tmp
   VIEW_COMPILED_PATH: /tmp
