--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "8.1.*",
-        "firevel/firestore": "^1.0.3",
-        "firevel/firestore-cache-driver": "^1.0.1",
+        "php": "^8.1",
+        "firevel/firestore": "^1.0.5",
+        "firevel/firestore-cache-driver": "^1.1.0",
         "firevel/firestore-session-driver": "^1.0.2",
         "firevel/stackdriver-log-channel": "^1.1.0",
         "guzzlehttp/guzzle": "^7.2",
