--- a/app.yaml.example
+++ b/app.yaml.example
@@ -1,4 +1,4 @@
-runtime: php73
+runtime: php82
 
 env_variables:
   ## Put your environment variables here.
@@ -15,7 +15,8 @@ env_variables:
   ## Store bootstrap cache files in writeable /tmp.
   APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
   APP_PACKAGES_CACHE: /tmp/bootstrap-cache-packages.php
-
+build_env_variables:
+  GOOGLE_COMPOSER_VERSION: 2.5.8
 handlers:
 - url: /robots.txt
   static_files: public/robots.txt
