--- a/app.yaml.example
+++ b/app.yaml.example
@@ -15,7 +15,9 @@ env_variables:
   ## Store bootstrap cache files in writeable /tmp.
   APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
   APP_PACKAGES_CACHE: /tmp/bootstrap-cache-packages.php
-
+build_env_variables:
+  APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
+  APP_PACKAGES_CACHE: /tmp/bootstrap-cache-packages.php
 handlers:
 - url: /robots.txt
   static_files: public/robots.txt
