--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,28 @@
 {
-    "name": "firevel/firevel",
+    "name": "laravel/laravel",
     "type": "project",
     "description": "The Serverless Laravel Framework for Google App Engine + Firestore.",
-    "keywords": [
-        "framework",
-        "firevel"
-    ],
+    "keywords": ["laravel", "framework", "firevel", "app engine", "gcp"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.2",
         "firevel/firestore": "^1.0.5",
         "firevel/firestore-cache-driver": "^1.1.0",
         "firevel/firestore-session-driver": "^1.0.2",
         "firevel/stackdriver-log-channel": "^1.1.0",
-        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.18",
         "laravel/tinker": "^2.8",
         "spatie/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^9.5.10",
+        "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "platform": {
-            "ext-sodium": "2"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
     },
     "autoload": {
         "psr-4": {
@@ -50,22 +36,38 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php artisan firevel:generate:app"
-        ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        },
+        "platform": {
+            "ext-sodium": "2"
+        }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
