--- a/app.yaml.example
+++ b/app.yaml.example
@@ -3,14 +3,15 @@ runtime: php82
 env_variables:
   FILESYSTEM_DISK: gcs
   FILESYSTEM_CLOUD: gcs
-  APP_STORAGE: /tmp
-  VIEW_COMPILED_PATH: /tmp/storage/views
-  LOG_CHANNEL: stackdriver
+  VIEW_COMPILED_PATH: /tmp
+  LOG_CHANNEL: stderr
+  LOG_STDERR_FORMATTER: Monolog\Formatter\GoogleCloudLoggingFormatter
   SESSION_DRIVER: firestore
   CACHE_DRIVER: firestore
   ## Store bootstrap cache files in writeable /tmp.
   APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
   APP_PACKAGES_CACHE: /tmp/bootstrap-cache-packages.php
+  LARAVEL_STORAGE_PATH: /tmp
 build_env_variables:
   GOOGLE_COMPOSER_VERSION: 2.5.8
   APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
