--- a/app.yaml.example
+++ b/app.yaml.example
@@ -7,7 +7,7 @@ env_variables:
   LOG_CHANNEL: stderr
   LOG_STDERR_FORMATTER: Monolog\Formatter\GoogleCloudLoggingFormatter
   SESSION_DRIVER: firestore
-  CACHE_DRIVER: firestore
+  CACHE_STORE: firestore
   ## Store bootstrap cache files in writeable /tmp.
   APP_SERVICES_CACHE: /tmp/bootstrap-cache-services.php
   APP_PACKAGES_CACHE: /tmp/bootstrap-cache-packages.php
