--- a/composer.json
+++ b/composer.json
@@ -2,28 +2,32 @@
     "name": "firevel/firevel",
     "type": "project",
     "description": "The Serverless Laravel Framework for Google App Engine + Firestore.",
-    "keywords": ["laravel", "framework", "firevel", "app engine", "gcp"],
+    "keywords": [
+        "laravel",
+        "framework",
+        "firevel",
+        "app engine",
+        "gcp"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "firevel/firestore": "^1.0.5",
         "firevel/firestore-cache-driver": "^1.1.0",
         "firevel/firestore-session-driver": "^1.0.2",
         "firevel/generator": "^0.1.0",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.20",
-        "laravel/tinker": "^2.8",
-        "spatie/laravel-google-cloud-storage": "^2.2"
+        "laravel/framework": "^11.34",
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-google-cloud-storage": "^2.3"
     },
     "require-dev": {
-        "composer/composer": "^2.1",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "composer/composer": "^2.7",
+        "fakerphp/faker": "^1.23",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
         "psr-4": {
