--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -11,6 +10,8 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
+
+PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
@@ -51,7 +52,7 @@ MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_SCHEME=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
