enable protobuf by default

--- a/php.ini
+++ b/php.ini
@@ -1,5 +1,8 @@
 ; enable the gRPC extension
 extension=grpc.so
 
+; enable the protobuf extension
+extension=protobuf.so
+
 ; Ref.: https://github.com/colopl/laravel-spanner/issues/12
 grpc.enable_fork_support = 1
