zen.max_allowed_stack_size set to -1

--- a/php.ini
+++ b/php.ini
@@ -6,3 +6,6 @@ extension=protobuf.so
 
 ; Ref.: https://github.com/colopl/laravel-spanner/issues/12
 grpc.enable_fork_support = 1
+
+; To avoid maximum call stack exception
+zend.max_allowed_stack_size = -1
